--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -5,7 +5,7 @@
   background-color: #fff;
   color: rgb(58, 58, 58);
   margin: 10px 0;
-  border-top: 3px solid #8931ef;
+  border: 2px solid #000;
 }
 
 .singleproject:hover {
