--- a/src/components/about/aboutme.css
+++ b/src/components/about/aboutme.css
@@ -68,12 +68,12 @@
 
 .laptop {
   position: absolute;
-  top: 70%;
+  top: 68%;
   left: 60%;
   z-index: -1;
 }
 .laptop img {
-  width: 158px;
+  width: 150px;
   animation: float 4s ease infinite;
 }
 
@@ -107,10 +107,11 @@
   position: absolute;
   width: 200px;
   height: 200px;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.6);
   display: flex;
   align-items: center;
   justify-content: center;
+  box-shadow: 0px 0px 10px #fff;
   top: 0;
   left: 0;
 }
@@ -131,7 +132,7 @@
   transform: rotateY(-90deg) rotateZ(90deg) translateZ(100px);
 }
 .face6 {
-  transform: rotateY(-90deg) translateZ(100px);
+  transform: rotateX(-90deg) translateZ(100px);
 }
 
 .cube-spinner div img {
@@ -153,7 +154,7 @@
     transform: rotateY(-180deg) rotateZ(90deg);
   }
   66% {
-    transform: rotateY(-270deg) rotateZ(90deg);
+    transform: rotateY(-270deg) rotateX(90deg);
   }
   83% {
     transform: rotateX(90deg);
