--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -16,6 +16,7 @@
 .singleproject img {
   width: 100%;
   height: 200px;
+  box-shadow: 0px 0px 5px #000;
 }
 .singleproject h4 {
   text-align: center;
