--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -7,8 +7,10 @@
 .main-container::before {
   content: "<body>";
   color: #8931ef;
-  opacity: 0.4;
+  opacity: 0.6;
   position: absolute;
+  font-family: "La Belle Aurore";
+  font-size: 15px;
   top: 11%;
   left: 6%;
 }
@@ -71,9 +73,10 @@
   position: absolute;
   top: 8px;
   left: 5px;
-  font-size: 12px;
+  font-family: "La Belle Aurore";
+  font-size: 15px;
   text-transform: lowercase;
-  opacity: 0.4;
+  opacity: 0.6;
 }
 .hero-text h1::after {
   content: "</h1>";
@@ -81,9 +84,10 @@
   position: absolute;
   bottom: -15px;
   left: -5px;
-  font-size: 12px;
+  font-family: "La Belle Aurore";
+  font-size: 15px;
   text-transform: lowercase;
-  opacity: 0.4;
+  opacity: 0.6;
 }
 .hero-text h3 .first-span span {
   display: inline-block;
@@ -91,13 +95,14 @@
 .hero-text h3 .first-span span:hover {
   animation: rubberBand;
   animation-duration: 1s;
-  color: purple;
+  color: #8931ef;
 }
 .hero-text p::before {
   content: "<p>";
   color: #8931ef;
-  opacity: 0.4;
-  font-size: 12px;
+  opacity: 0.6;
+  font-family: "La Belle Aurore";
+  font-size: 15px;
   margin-right: 3px;
 }
 
@@ -105,7 +110,9 @@
   content: "</p>";
   font-size: 12px;
   color: #8931ef;
-  opacity: 0.5;
+  opacity: 0.6;
+  font-family: "La Belle Aurore";
+  font-size: 16px;
   margin-left: 3px;
 }
 .hero-img {
@@ -170,7 +177,7 @@
   transform: rotate(90deg);
 }
 .updown {
-  font-size: 16px;
+  font-size: 18px;
   width: 100px;
   margin-right: 0;
   animation: up 1s ease infinite;
@@ -246,7 +253,7 @@
   }
   .hero-text h3 {
     font-size: 1.4rem;
-    margin-top: 10px;
+    margin-top: 0;
   }
   .hero-text h1 {
     font-size: 1.7rem;
