--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -24,25 +24,27 @@
 .portfolio-container h1 {
   padding-top: 3.5rem;
   font-size: 5rem;
-  color: #000;
+  color: #8931ef;
   text-align: center;
   position: relative;
 }
 .portfolio-container h1::before {
   content: "<h1>";
-  color: purple;
+  color: #8931ef;
   position: absolute;
+  font-family: "La Belle Aurore";
   left: 30%;
-  font-size: 13px;
+  font-size: 18px;
   text-transform: lowercase;
   opacity: 0.6;
 }
 .portfolio-container h1::after {
   content: "</h1>";
-  color: purple;
+  color: #8931ef;
   position: absolute;
+  font-family: "La Belle Aurore";
   right: 30%;
-  font-size: 13px;
+  font-size: 18px;
   bottom: 0;
   text-transform: lowercase;
   opacity: 0.6;
@@ -62,12 +64,11 @@
 }
 
 .p-buttons button {
-  border: 1px solid #000;
+  border: 1px solid #8931ef;
   padding: 5px 10px;
   font-weight: 500;
   margin-right: 1rem;
   font-size: 16px;
-  color: #000;
   cursor: pointer;
 }
 .p-buttons button:hover {
